Add basic walking off edge
WIP #4

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,3 +55,9 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+AgentMaxStepHeight=35.000000
+AgentRadius=34.000000
+AgentHeight=144.000000
+MergeRegionSize=400.000000
+
